--- a/Ejercicios en clase/clase1-ej2/src/app/bienvenido/bienvenido.component.html
+++ b/Ejercicios en clase/clase1-ej2/src/app/bienvenido/bienvenido.component.html
@@ -1,2 +1,3 @@
 <h3>Bienvenido a esta humilde paginita</h3>
 <button (click)="IrALogin()">Log in</button>
+<button (click)="IrARegistrarse()">Sign in</button>
